Fix logo, image-gallery and overflow

--- a/impress.css
+++ b/impress.css
@@ -21,6 +21,7 @@ body {
     left: 0;
     top: 0;
     background: rgba(0, 0, 0, 0.336);
+    overflow-x: hidden;
 }
 
 a {
